fix: Add z-index to titles

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -7,6 +7,7 @@
   letter-spacing: -11.25px;
   text-align: center;
   margin: 0;
+  z-index: 0;
 }
 
 .header__box {
@@ -27,6 +28,7 @@
   );
   backdrop-filter: blur(15px);
   margin: -65px auto 0;
+  z-index: 1;
 }
 
 .header__subtitle {
